# rocon_motion_pipeline

./: .gitignore  README.md  motion_pipeline.rosinstall
imu_tf_publisher/: .cproject  .project  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
imu_tf_publisher/src/: imu_tf_publisher.cpp
pandent_publisher/: CMakeLists.txt  my_robot.urdf  package.xml  pandent.launch
pandent_publisher/devel/: .catkin  .rosinstall  setup.sh
pandent_publisher/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
pandent_publisher/devel/share/pandent_publisher/cmake/: pandent_publisherConfig.cmake  pandent_pulisherConfig.cmake
pandent_publisher/devel/share/testbot_description/cmake/: testbot_descriptionConfig.cmake
pandent_publisher/launch/: pandent.launch
pandent_publisher/src/: pandant.cpp~  pandent.cpp  pandent.cpp~
pandent_publisher/src/pandent_publisher/: pandent.launch
pandent_publisher/src/pandent_publisher/src/: pandent.cpp
pandent_publisher/src/robot_description/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
pandent_publisher/urdf/: my_robot.urdf
pendant_publisher/: CMakeLists.txt  README.md  package.xml
pendant_publisher/launch/: pendant.launch  pendant.launch~
pendant_publisher/src/: parser.cpp~  pendant.cpp
pendant_publisher/urdf/: pendant.urdf~
rocon_motion_pipeline/: .cproject  .project  CMakeLists.txt  package.xml
