<?xml version="1.0"?>
<package>
  <name>imu_tf_publisher</name>
  <version>0.0.1</version>
  <description>Catkin metapackage</description>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/robotics-in-concert/rocon_motion_pipeline</url>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>
  <author email="hjy8099@nate.com">하 재열 (Ha Jaeyeol)</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>