<?xml version="1.0"?>
<package>
  <name>rocon_motion_pipeline</name>
  <version>0.0.1</version>
  <description>Catkin metapackage for the ROCON motion pipeline</description>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/robotics-in-concert/rocon_motion_pipeline</url>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>imu_tf_publisher</run_depend>

  <export>
    <metapackage/>
  </export>
</package>